--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   },
   "optionalDependencies": {
     "eslint-plugin-security": "^1.4.0"
+  },
+  "dependencies": {
+    "eslint-config-react-app": "^3.0.8"
   }
 }
